<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/icon_back"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/back"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/logoimg"
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:contentDescription="@string/logo_image"
            android:src="@drawable/logo"
            android:layout_marginTop="75dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:id="@+id/containerBase"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="175dp"
            android:background="@drawable/curved_bottom_border_full"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logoimg" />

        <TextView
            android:id="@+id/txtNomeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_marginStart="25dp"
            android:text="@string/txt_nomecadastro"
            android:textColor="@color/Chocolate"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/containerBase"
            app:layout_constraintTop_toBottomOf="@id/logoimg" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_border"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:maxLines="1"
            android:padding="8dp"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/txtNomeLabel"/>

        <TextView
            android:id="@+id/txtEmailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_emailcadastro"
            android:textColor="@color/Chocolate"
            android:textSize="20sp"
            android:layout_marginTop="25dp"
            android:layout_marginStart="25dp"
            app:layout_constraintStart_toStartOf="@id/containerBase"
            app:layout_constraintTop_toBottomOf="@id/etNome" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_border"
            android:inputType="textEmailAddress"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:maxLines="1"
            android:padding="8dp"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/txtEmailLabel"/>

        <TextView
            android:id="@+id/txtSenhaLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_senhacadastro"
            android:textColor="@color/Chocolate"
            android:textSize="20sp"
            android:layout_marginTop="25dp"
            android:layout_marginStart="25dp"
            app:layout_constraintStart_toStartOf="@id/containerBase"
            app:layout_constraintTop_toBottomOf="@id/etEmail" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_border"
            android:inputType="textPassword"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:maxLines="1"
            android:padding="8dp"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/txtSenhaLabel"/>

        <TextView
            android:id="@+id/txtConfirmaSenhaLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Confirmar Senha"
            android:textColor="@color/Chocolate"
            android:textSize="20sp"
            android:layout_marginTop="25dp"
            android:layout_marginStart="25dp"
            app:layout_constraintStart_toStartOf="@id/containerBase"
            app:layout_constraintTop_toBottomOf="@id/etPassword" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_border"
            android:inputType="textPassword"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:maxLines="1"
            android:padding="8dp"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/txtConfirmaSenhaLabel" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/background_button_selector"
            android:text="@string/btn_cadastrar"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/etConfirmPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
